--- a/tienda.pug
+++ b/tienda.pug
@@ -16,9 +16,9 @@ header#header(style='background-color:rgb(252, 227, 0) ;')
           img(src='img/logo.png' alt='logo' width='250' height='136')
       .col-md-2
         .info-der
-          button.btn.btn-dark.mt-3.btn-sm(type='button') Iniciar sesi&oacute;n
+          button.btn.btn-dark.mt-3.btn-sm(type='button' data-toggle='Iniciar sesión' title='Iniciar sesión') Iniciar sesi&oacute;n
           br
-          button.btn.btn-dark.mt-3.btn-sm(type='button') Registrarse
+          button.btn.btn-dark.mt-3.btn-sm(type='button' data-toggle='Regístrate' title='Regístrate') Registrarse
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
   a.navbar-brand(href='#') Filtrar
   .dropdown
@@ -39,26 +39,26 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
       li.dropdown.dropdown-submenu
         a(classname='dropdown-toggle' href='/' id='categoría1' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')  Categor&iacute;a 1 
         div(classname='dropdown-menu' aria-labelledby='navbarDropdown')
-          a.dropdown-item(id='cat1.1' href='#') Subcategoría 1
-          a.dropdown-item(id='cat1.2' href='#') Subcategoría 2
-          a.dropdown-item(id='cat1.3' href='#') Subcategoría 3
+          a.dropdown-item(id='cat1.1' href='#') Subcategor&iacute;a 1
+          a.dropdown-item(id='cat1.2' href='#') Subcategor&iacute;a 2
+          a.dropdown-item(id='cat1.3' href='#') Subcategor&iacute;a 3
       li.dropdown.dropdown-submenu
         a(classname='dropdown-toggle' href='/' id='categoría2' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')  Categor&iacute;a 2 
         div(classname='dropdown-menu' aria-labelledby='navbarDropdown')
-          a.dropdown-item(id='cat2.1' href='#') Subcategoría 1
-          a.dropdown-item(id='cat2.2' href='#') Subcategoría 2
+          a.dropdown-item(id='cat2.1' href='#') Subcategor&iacute;a 1
+          a.dropdown-item(id='cat2.2' href='#') Subcategor&iacute;a 2
       li.dropdown.dropdown-submenu
         a(classname='dropdown-toggle' href='/' id='categoría3' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')  Categor&iacute;a 3 
         div(classname='dropdown-menu' aria-labelledby='navbarDropdown')
-          a.dropdown-item(id='cat3.1' href='#') Subcategoría 1
-          a.dropdown-item(id='cat3.2' href='#') Subcategoría 2
+          a.dropdown-item(id='cat3.1' href='#') Subcategor&iacute;a 1
+          a.dropdown-item(id='cat3.2' href='#') Subcategor&iacute;a 2
       li.dropdown.dropdown-submenu
         a(classname='dropdown-toggle' href='/' id='categoría 4' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')  Categor&iacute;a 4 
         div(classname='dropdown-menu' aria-labelledby='navbarDropdown')
-          a.dropdown-item(id='cat4.1' href='#') Subcategoría 1
+          a.dropdown-item(id='cat4.1' href='#') Subcategor&iacute;a 1
   form.form-inline.my-2.my-lg-0
     input.form-control.mr-sm-2(type='search' placeholder='Buscar' aria-label='Buscar')
-    button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Buscar
+    button.btn.btn-outline-warning.my-2.my-sm-0(type='submit' data-toggle='Buscar' title='Buscar') Buscar
 .container-fluid
   .row
     .color1.col-md-8
@@ -69,33 +69,36 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
             .card-body
               center
                 h5.card-title Leche
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                   i.fa.fa-cart-plus.fa-2x
                 |                   number
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                   i.fa.fa-cart-arrow-down.fa-2x
+                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
         td
           .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
             img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
             .card-body
               center
                 h5.card-title Leche
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                   i.fa.fa-cart-plus.fa-2x
                 |                   number
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                   i.fa.fa-cart-arrow-down.fa-2x
+                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
         td
           .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
             img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
             .card-body
               center
                 h5.card-title Leche
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                   i.fa.fa-cart-plus.fa-2x
                 |                   number
-                button.btn(type='button')
+                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                   i.fa.fa-cart-arrow-down.fa-2x
+                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
         tr(align='center')
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
@@ -103,33 +106,36 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
               img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
               img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
         tr
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
@@ -137,44 +143,49 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
               img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
           td
             .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
               img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
               .card-body
                 center
                   h5.card-title Leche
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
                     i.fa.fa-cart-plus.fa-2x
                   |                   number
-                  button.btn(type='button')
+                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
                     i.fa.fa-cart-arrow-down.fa-2x
+                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
     .col-xs-6.col-md-4
       center
-        a(href='carrito.html')
-          i.fa.fa-shopping-cart.fa-5x  
+        a(href='pagar.html')
+          button.btn.btn-outline-primary(data-toggle='Pagar' title='Pagar')
+            i.fa.fa-shopping-cart.fa-5x
         br
         br
         br
         p
-          | Producto nombre cantidad 
+          | Producto cantidad 
           a(href='#')
-            i.fa.fa-cart-arrow-down.fa-2x
+            button.btn.btn-outline-primary(data-toggle='Eliminar' title='Eliminar')
+              i.fa.fa-cart-arrow-down.fa-2x
 // Latest compiled and minified JavaScript
 script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
 script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
