--- a/tienda.pug
+++ b/tienda.pug
@@ -59,134 +59,20 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
   form.form-inline.my-2.my-lg-0
     input.form-control.mr-sm-2(type='search' placeholder='Buscar' aria-label='Buscar')
     button.btn.btn-outline-warning.my-2.my-sm-0(type='submit' data-toggle='Buscar' title='Buscar') Buscar
-.container-fluid
+.container
   .row
-    .color1.col-md-8
-      table.table
-        td
-          .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-            img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-            .card-body
-              center
-                h5.card-title Leche
-                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                  i.fa.fa-cart-plus.fa-2x
-                |                   number
-                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                  i.fa.fa-cart-arrow-down.fa-2x
-                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-        td
-          .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-            img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-            .card-body
-              center
-                h5.card-title Leche
-                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                  i.fa.fa-cart-plus.fa-2x
-                |                   number
-                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                  i.fa.fa-cart-arrow-down.fa-2x
-                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-        td
-          .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-            img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-            .card-body
-              center
-                h5.card-title Leche
-                button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                  i.fa.fa-cart-plus.fa-2x
-                |                   number
-                button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                  i.fa.fa-cart-arrow-down.fa-2x
-                button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-        tr(align='center')
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-        tr
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-          td
-            .card(style='width: 18rem; background-color: rgb(252, 227, 0);')
-              img.card-img-top(src='img/leche.jpg' alt='...' style='height: 250px;')
-              .card-body
-                center
-                  h5.card-title Leche
-                  button.btn(type='button' data-toggle='Agregar 1' title='Agrega 1')
-                    i.fa.fa-cart-plus.fa-2x
-                  |                   number
-                  button.btn(type='button' data-toggle='Quita 1' title='Quita 1')
-                    i.fa.fa-cart-arrow-down.fa-2x
-                  button.btn.btn-dark(type='button' data-toggle='Enviar al carrito' title='Enviar al carrito') Agregar
-    .col-xs-6.col-md-4
+    // Elementos generados a partir del JSON
+    main#items.col-sm-8.row  
+    // Carrito
+    aside.col-sm-4
       center
-        a(href='pagar.html')
-          button.btn.btn-outline-primary(data-toggle='Pagar' title='Pagar')
-            i.fa.fa-shopping-cart.fa-5x
-        br
-        br
-        br
-        p
-          | Producto cantidad 
-          a(href='#')
-            button.btn.btn-outline-primary(data-toggle='Eliminar' title='Eliminar')
-              i.fa.fa-cart-arrow-down.fa-2x
-// Latest compiled and minified JavaScript
-script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
-script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
-script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous')
+        i.fa.fa-shopping-cart.fa-5x(style='color:#fbd300;')
+      // Elementos del carrito
+      ul#carrito.list-group
+      hr
+      // Precio total
+      p.text-right
+        | Total:&amp;dollar; 
+        span#total
+      button#boton-vaciar.btn.btn-warning Vaciar
+      button#boton-pagar.btn.btn-warning Pagar
